AOL_MachineLearning/src/components/navbar/navbar.css
.navbar {
  position: fixed;
  width: 100%;
  background-color: white;
  padding-top: 15px;
  padding-bottom: 15px;
  box-shadow: 1px 7px 15px -2px rgba(0, 0, 0, 0.09);
  -webkit-box-shadow: 1px 7px 15px -2px rgba(0, 0, 0, 0.09);
  -moz-box-shadow: 1px 7px 15px -2px rgba(0, 0, 0, 0.09);
}

.navbar .left-side img {
  height: 40px;
}

